// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Returns current domain from a request object renders async initial fields without crashing 1`] = `
<MockComponent
  fields={Object {}}
  formIsEmpty={[Function]}
  getFormFieldProps={[Function]}
  getInitialFields={[Function]}
  handleCustomError={[Function]}
  handleSubmit={[Function]}
  handleUserBlur={[Function]}
  handleUserInput={[Function]}
  resetFormFields={[Function]}
  touchForm={[Function]}
  updateLocalStorageFromState={[Function]}
  updateStateFromLocalStorage={[Function]}
/>
`;

exports[`Returns current domain from a request object renders without crashing 1`] = `
<MockComponent
  fields={
    Object {
      "answer": Object {
        "error": false,
        "touched": false,
        "validations": Array [
          Object {
            "message": "COMPANY_PROFILE_QA_ANSWER_AS_EMPLOYER",
            "type": "isEmpty",
          },
        ],
        "value": "",
      },
    }
  }
  formIsEmpty={[Function]}
  getFormFieldProps={[Function]}
  getInitialFields={[Function]}
  handleCustomError={[Function]}
  handleSubmit={[Function]}
  handleUserBlur={[Function]}
  handleUserInput={[Function]}
  resetFormFields={[Function]}
  touchForm={[Function]}
  updateLocalStorageFromState={[Function]}
  updateStateFromLocalStorage={[Function]}
/>
`;
